# AskDock

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  questiondock-tauri-mvp.md  vite.config.ts
.github/workflows/: release.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: gen_sprout.py
