[package]
name = "askdock"
version = "0.1.0"
description = "A lightweight dock that surfaces the AI questions you ask per terminal window."
authors = ["AskDock"]
edition = "2021"

[lib]
name = "askdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
window-vibrancy = "0.6"

